--- a/README
+++ b/README
@@ -15,7 +15,9 @@ Drive Trak is an for parents or resposible parties to ensure that their drivers 
 ***Getting the Info***
 -Receive realtime push notifications to your phone when any of the limits are exceeded
 -Receive an email report immdiately after the driver puts the car in park
+-Receieve realtime updates on drivers device of their maximum values
 -Link two devices as Driver and Parent with a simple 'click and scan' process using QR code technology
+
 
 /*INSTRUCTIONS TO USE THIS APP
  *
