--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Drive Trak is mobile app for parents or resposible parties to ensure that their drivers are drving safely and resposibily in realtime.  Using a Denso CAN Wifi Unit to connect with the vehicle, drivers actions are tracked and reported realtime with the option for parents to receive push notifications when their driver exceeds a predefined limit.
+Drive Trak is a mobile app for parents or resposible parties to ensure that their drivers are drving safely and resposibily in realtime.  Using a Denso CAN Wifi Unit to connect with the vehicle, drivers actions are tracked and reported realtime with the option for parents to receive push notifications when their driver exceeds a predefined limit.
 
 This app is perfect for the wooried parent with a teenager out on the town for the first time with their fresh drivers license.  They can receive immdiate notification if there are any issues with the childs drving and see a full report as soon as th child puts the car in park.  The app could also be repurposed for commercial drivers as well.
 
